# mlir_toy_dialect_standalone

./: CMakeLists.txt  README.md
include/toy/: CMakeLists.txt  Dialect.h  Ops.td
include/toy/Passes/: CMakeLists.txt  ShapeInferenceInterface.h
lib/toy/: CMakeLists.txt  Dialect.cpp  MLIRGen.cpp
lib/toy/Passes/: CMakeLists.txt  LowerToAffineLoops.cpp  LowerToLLVM.cpp  ShapeInferencePass.cpp  ToyCombine.cpp
src/: CMakeLists.txt  toyc.cpp
test_files/: test_sub.toy
